--- a/dave_1.html
+++ b/dave_1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 3.0//EN" "html.dtd">
+<!DOCTYPE HTML >
 <HTML>
 <HEAD>
 <TITLE>Dr Dave's Favorite Pages 1</TITLE>
@@ -7,12 +7,12 @@
 </HEAD>
 
 <BODY  background="Images/bg-bkgrd.gif" BGCOLOR="#A4C8F0">
-
-<P><BASEFONT SIZE=4></BASEFONT>
-<H1><CENTER> Dr Dave's Favorite Pages 1</CENTER></H1><P>
-
+<center>
+<H1> Dr Dave's Favorite Pages 1</H1><P>
+</p><hr size=3 width=50%>
 <!---------------------->
-<P align=center><strong> COMPUTER HARDWARE </strong><br>
+<P>
+    <strong> COMPUTER HARDWARE </strong><br>
 <br>
 <A HREF="http://www.axiomint.com"> Axiom Intl </A> --
 <A HREF="http://www.phoenix.com"> Phoenix Technologies Bios </A> --
@@ -58,9 +58,9 @@
 <A href="http://www.qms.com"> QMS Printers </A>
 <A HREF="http://www.ast.com"> AST Computers </A> --
 <A HREF="http://www.PackardBell.com"> Packard Bell Computers </A>
-
+</p><hr size=3 width=50%>
 <!---------------------->
-<P align=center><strong> COMPUTER SOFTWARE </strong><br>
+<P><strong> COMPUTER SOFTWARE </strong><br>
 <br>
 <A HREF="http://www.pgp.com"> Pretty Good Privacy </A> --
 <A HREF="http://web.mit.edu/network/pgp.html"> PGP page </A> --
@@ -169,10 +169,10 @@
 <A HREF="http://www.iomega.com"> Iomega </A> --
 <A HREF="http://www.philipsmagnavox.com"> Philips/Magnavox </A> --
 </p>
-<hr size=3 width=90%>
+<hr size=3 width=50%>
   
 <!---------------------->
-<P align=center><strong> COMPUTER SHOPPING </strong><br>
+<P><strong> COMPUTER SHOPPING </strong><br>
 <A href="http://www.computability.com"> Computability </A> --
 <A href="http://www.cdw.com"> Computer Discount Warehouse </A> --
 <A href="http://www.compusa.com"> CompUsa </A> --
@@ -199,10 +199,10 @@
 <A HREF="http://www.vemporium.com"> Virtual Emporium Stores </A> --
 <A HREF="http://www.FAO.com"> FAO Schwarz </A> --
 </p>
-<hr size=3 width=90%>
+<hr size=3 width=50%>
 
 <!---------------------->
-<P align=center><strong> INTERNET SERVICE PROVIDERS </strong><br>
+<P><strong> INTERNET SERVICE PROVIDERS </strong><br>
 <A href="http://www.zoomnet.net"> ZoomNet </A> --
 <A href="http://www.bright.net"> Brightnet </A> --
 <A href="http://www.vni.net/thedirectory"> ISP Directory </a> --
@@ -229,15 +229,13 @@
 <A HREF="http://www.sprynet.com"> Sprynet ISP </A> --
 <A HREF="http://www.weir.net"> Weirton Net ISP </A> --
 <A HREF="http://www.hgo.net"> Wheeling Net ISP </A> --
-<hr size=3 width=90%>
+<hr size=3 width=50%>
 
 <!---------------------->
-<img align=left src="Images/an-clock.gif">
-<p align=center> <strong> SEARCH the NET </strong><br>
+<p> <strong> SEARCH the NET </strong><br>
 <A href="http://www.search.com"> Search </A> --
 <A href="http://www.Four11.com"> 411 Search </A> --
-<A href="http://www.iaf.net"> Internet Address Finder</A>
-<br>
+<A href="http://www.iaf.net"> Internet Address Finder</A> --
 <A href="http://www.lookup.com"> Lookup!</A>
 <br>
 <A href="http://www.websearch.com"> WEB Search </A> --
@@ -263,18 +261,20 @@
 Enter subject of Yahoo! <INPUT SIZE=30 NAME=p> <INPUT TYPE=submit VALUE="Search">
 </FORM></p>
 <!-- End Yahoo Search Form -->
-
-</p><hr size=3 width=90%>
-<!---------------------->
-<p align=center>  Go to:  
-<img align=absmiddle src="Images/blueball.gif">
-<A href="dave_0.html">  Page 0 </A>
-<img align=absmiddle src="Images/blueball.gif">
-<A href="dave_2.html">  Page 2 </A>
-<img align=absmiddle src="Images/blueball.gif">
-<A href="dave_3.html">  Page 3 </A>
-<img align=absmiddle src="Images/blueball.gif">
-<A href="dave_4.html">  Page 4 </A>
-</p><hr size=5>
+<footer>
+    </p><hr size=3 width=50%>
+    <!---------------------->
+    <p>  Go to:  
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_0.html">  Page 0 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_2.html">  Page 2 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_3.html">  Page 3 </A>
+    <img align=absmiddle src="Images/blueball.gif">
+    <A href="dave_4.html">  Page 4 </A>
+    </p></P>
+</footer>
+</center>
 </BODY>
 </HTML>
