--- a/dave_2.html
+++ b/dave_2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 3.0//EN" "html.dtd">
+<!DOCTYPE HTML>
 <HTML>
 <HEAD>
 <TITLE>Dr Dave's Favorite Pages</TITLE>
@@ -7,12 +7,12 @@
 </HEAD>
 
 <BODY  background="Images/bg-bkgrd.gif" BGCOLOR="#A4C8F0">
-
-<P><BASEFONT SIZE=4></BASEFONT>
-<H1><CENTER> Dr Dave's Favorite Pages 2</CENTER></H1><P>
+<center>
+<P>
+<H1> Dr Dave's Favorite Pages 2</H1><P>
 
 <!---------------------->
-<p align=center> <strong> INTERGRAPH / MICROSTATION </strong><br>
+<p> <strong> INTERGRAPH / MICROSTATION </strong><br>
 <A href="http://www.ingr.com"> Intergraph </A> --
 <A href="http://www.ingr.com/bbs"> Intergraph BBS </A> --
 <A href="http://www.ingr.com/worksheet/ws.pl?SYSTEMS"> Log Intergraph Problems</A>
@@ -26,11 +26,11 @@
 <A href="http://www.pcscad.com"> Pangea Cad Solutions </A>
 <A HREF="http://www.plus3.com"> Plus3 Engineering Software </A> --
 <A HREF="http://www.nvsi.com"> MicroStation Stuff </A>
-</p><hr size=3 width=90%>
+</p></p><hr size=3 width=50%>
 
 <!---------------------->
-<img align=absmiddle src="Images/car.gif">
-<p align=center> <strong> AUTOS </strong><br>
+<img src="Images/car.gif">
+<p> <strong> AUTOS </strong><br>
 <A href="http://www.buick.com"> Buick </A> --
 <A href="http://www.chevrolet.com"> Chevy </A> --
 <A href="http://www.chryslercorp.com"> Chrysler </A> --
@@ -86,11 +86,11 @@
 <A href="http://www.ashland.com"> Ashland (Oil) </A> --
 <A href="http://www.valvoline.com"> Valvoline </A> --
 <A href="http://www.nascar.com"> NASCAR </A>
-</p><hr size=3 width=90%>
+</p></p><hr size=3 width=50%>
 
 <!---------------------->
-<img align=absmiddle src="Images/tape.gif">
-<p align=center> <strong> HOME IMPROVEMENT </strong><br>
+<img src="Images/tape.gif">
+<p> <strong> HOME IMPROVEMENT </strong><br>
 <A HREF="http://www.pozzi.com"> Pozzi Wood Windows </A> --
 <A HREF="http://www.icynene.on.ca"> Icynene Insulation </A> --
 <br>
@@ -134,10 +134,10 @@
 <A HREF="http://www.trexdecks.com"> Trex Decks </A> --
 <A HREF="http://www.leatherman.com"> Pocket Tools </A>
 <A HREF="http://www.vermontcastings.com"> Stoves </A> --
-</p><hr size=3 width=90%> 
+</p> </p><hr size=3 width=50%>
 
 <!---------------------->
-<p align=center> <strong> HOME MAINTENANCE </strong><br>
+<p> <strong> HOME MAINTENANCE </strong><br>
 <br>
 <A HREF="http://www.brita.com"> Brita Filters </A> --
 <A HREF="http://www.jacuzzi.com"> Jacuzzi </A> --
@@ -170,11 +170,11 @@
 <A HREF="http://www.trane.com/res/res.html"> Trane (HVAC) </A> --
 <A HREF="http://www.DaveLennox.com"> Lennox (HVAC) </A> --
 <A HREF="http://www.amana.com"> Amana (HVAC) </A> --
-</p><hr size=3 width=90%>
+</p></p><hr size=3 width=50%>
 
 <!---------------------->
-<img align=left src="Images/an-brick.gif">
-<p align=center> <strong> ENGINEERING </strong><br>
+<img src="Images/an-brick.gif">
+<p> <strong> ENGINEERING </strong><br>
 <A HREF="http://www.ppi2pass.com"> Professional Publications </A> --
 <br>
 <A HREF="http://www.pcsurvey.com"> PC (Land) Survey </A> --
@@ -203,11 +203,11 @@
 <A HREF="http://www.astm.org"> ASTM </A> --
 <A HREF="http://www.utexas.edu/research/superpave/"> The Superpave Center at Austin</A> --
 <A HREF="http://www.nap.edu/readingroom"> Engineering Books Online </A> --
-</p><hr size=3 width=90%>
+</p></p><hr size=3 width=50%>
 
 <!---------------------->
-<img align=left src="Images/an-road.gif">
-<p align=center> <strong> HIGHWAYS </strong><br>
+<img src="Images/an-road.gif">
+<p> <strong> HIGHWAYS </strong><br>
 <A HREF="http://www.oakland.edu/boatnerd/">  Great Lakes Vessel Passage </A> --
 <A HREF="http://www.thoma.com/thoma/goldgate.html"> Golden Gate Bridge </A> --
 <A HREF="http://members.aol.com/rcmoeur/trafstuf.html"> Traffic Eng. stuff </A> --
@@ -246,10 +246,10 @@
 <br>
 <A HREF="http://pages.prodigy.net/john.simpson/highways/ohhwys.html"> Ohio Highways </A> --
 <A HREF="http://www.ihoz.com/interstates.html"> Interstates </A>
-</p><hr size=3 width=90%>
-
+</p></p><hr size=3 width=50%>
+<hr>
 <!---------------------->
-<p align=center>  Go to:  
+<p>  Go to:  
 <img align=absmiddle src="Images/blueball.gif">
 <A href="dave_0.html">  Page 0 </A>
 <img align=absmiddle src="Images/blueball.gif">
@@ -258,6 +258,6 @@
 <A href="dave_3.html">  Page 3 </A>
 <img align=absmiddle src="Images/blueball.gif">
 <A href="dave_4.html">  Page 4 </A>
-</p><hr size=5>
+</p> </center>
 </BODY>
 </HTML>
