--- a/dave_3.html
+++ b/dave_3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 3.0//EN" "html.dtd">
+<!DOCTYPE HTML>
 <HTML>
 <HEAD>
 <TITLE>Dr Dave's Favorite Pages</TITLE>
@@ -7,11 +7,11 @@
 </HEAD>
 <BODY  background="Images/bg-bkgrd.gif" BGCOLOR="#A4C8F0" >
 
-<P><BASEFONT SIZE=4></BASEFONT>
-<H1><CENTER> Dr Dave's Favorite Pages 3</CENTER></H1><P>
+<center>
+<H1> Dr Dave's Favorite Pages 3</H1><P>
 
 <!---------------------->
-<p align=center> <strong> EDUCATION </strong><br>
+<p > <strong> EDUCATION </strong><br>
 <br>
 <A HREF="http://www.royal.gov.uk"> British Monarchy </A> --
 <A HREF="http://www.hfmgv.org"> Henry Ford Museum </A> --
@@ -71,10 +71,10 @@
 <A href="http://www.lhs.berkeley.edu/"> Lawrence Hall of Science </A> --
 <A href="http://www.miamisci.org"> Miami Museum of Science </A> --
 <A href="http://www.exploratorium.edu:80/"> Exploratorium </A>
-</p><hr size=3 width=90%>
+</p><hr size=3 width=50%>
 
 <!---------------------->
-<p align=center> <strong> FINANCIAL </strong><br>
+<p > <strong> FINANCIAL </strong><br>
 <A href="http://www.fid-inv.com"> Fidelity Investments </A> --
 <A href="http://www.ml.com"> Merrill Lynch Investments </A> --
 <A href="http://www.janus.com"> Janus Investments </A>
@@ -108,10 +108,10 @@
 <A HREF="http://www.morningstar.com"> Morningstar Investing </A> --
 <A HREF="http://www.experian.com"> Experian/TRW Credit Reports </A> --
 <A HREF="http://www.fraud.org"> Fight Fraud </A> --
-</p><hr size=3 width=90%> 
+</p><hr size=3 width=50%> 
 
 <!---------------------->
-<p align=center> <strong> GENEALOGY </strong><br>
+<p > <strong> GENEALOGY </strong><br>
 <A href="http://ourworld.compuserve.com:80/homepages/roots"> CompuServe Genealogy</A> --
 <A HREF="http://www.genhomepage.com"> GenHomepage </A>
 <br>
@@ -121,10 +121,10 @@
 <br>
 <A HREF="http://www.familytreemaker.com"> Family Tree Maker Genealogy </A> --
 <A HREF="http://www.ogs.org"> Ohio Genealogical Society </A>
-</p><hr size=3 width=90%>
+</p><hr size=3 width=50%>
 
 <!---------------------->
-<p align=center> <strong> GOVERNMENT </strong><br>
+<p > <strong> GOVERNMENT </strong><br>
 <A HREF="http://www.fema.gov"> FEMA </A> --
 <A HREF="http://www.fcc.gov"> Federal Communications Commission </A> --
 <br>
@@ -142,19 +142,19 @@
 <br>
 <A HREF="http://www.lib.lsu.edu/gov/fedgov.html"> U.S. Federal Government Agencies </A> --
 <A HREF="http://www.nsa.gov"> National Security Agency </A>
-</p><hr size=3 width=90%>
+</p><hr size=3 width=50%>
 
 <!---------------------->
-<p align=center> <strong>MEDICAL </strong><br>
+<p > <strong>MEDICAL </strong><br>
 <A href="http://www.nmss.org"> National Multiple Sclerosis Society </A> --
 <A HREF="http://www.mscalgary.org/"> Calgary MS </A>
 <a href="http://www.betaseron.com"> MS BetaSeron </a> --
 <A href="http://pubs.ama-assn.org/"> AMA Journal </A> --
 <A href="http://www.redcross.org"> Red Cross </A>
-</p><hr size=3 width=90%>
+</p><hr size=3 width=50%>
 
 <!---------------------->
-<p align=center> <strong> MISC </strong><br>
+<p > <strong> MISC </strong><br>
 <A href="http://www.gamelan.com"> Sardinia Puzzle (Java) </A> --
 <A href="http://www.digits.com/web_counter/faq.html"> Web Counter FAQ </A> --
 <br>
@@ -181,7 +181,7 @@
 <A HREF=" http://www.perryholidayhotel.com"> Put-in-Bay Hotel </A> --
 <A HREF="http://www.the-boardwalk.com"> Put-in-Bay Restaurant </A> --
 <A HREF="http://www.mackerel.com/bubble.html"> Bubble Wrap </A>
-<hr size=3 width=90%>
+<hr size=3 width=50%>
 
 <!---------------------->
 <p align=center>  Go to:  
@@ -193,6 +193,6 @@
 <A href="dave_2.html">  Page 2 </A>
 <img align=absmiddle src="Images/blueball.gif">
 <A href="dave_4.html">  Page 4 </A>
-</p><hr size=5>
+</p></p></center>
 </BODY>
 </HTML>
