--- a/dave_4.html
+++ b/dave_4.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 3.0//EN" "html.dtd">
+<!DOCTYPE HTML>
 <HTML>
 <HEAD>
 <TITLE>Dr Dave's Favorite Pages 4 </TITLE>
@@ -8,10 +8,10 @@
 
 <BODY  background="Images/bg-bkgrd.gif" BGCOLOR="#A4C8F0">
 
-<P><BASEFONT SIZE=4></BASEFONT>
-<H1><CENTER> Dr Dave's Favorite Pages 4 </CENTER></H1><P>
+<P><center>
+<H1> Dr Dave's Favorite Pages 4 </H1><P>
 <!---------------------->
-<p align=center> <strong> BIRDS </strong><br>
+<p > <strong> BIRDS </strong><br>
 <A href="http://www.birdwatchersgeneralstore.com/"> BirdWatchers Store </A> --
 <A href="http://www.birdguides.com/"> Bird Guides </A> --
 <A href="http://www.hummingbirds.net/"> Lannys Hummers </A> --
@@ -19,10 +19,10 @@
 <br>
 <A href="http://www.npwrc.usgs.gov/resource/birds/chekbird/index.htm"> Birding Checklists </A> --
 <A href="http://www.bcpl.lib.md.us/~tross/baltbird.html"> Balt.Bird Club </A> --
-</p><hr size=3 width=90%>
+</p><hr size=3 width=50%>
 
 <!---------------------->
-<p align=center> <strong> COMMERCIAL </strong><br>
+<p > <strong> COMMERCIAL </strong><br>
 <A HREF="http://www.atari.com"> Atari </A> --
 <A HREF="http://www.sega.com"> Sega </A> --
 <br>
@@ -79,7 +79,7 @@
 <A href="http://www.canon.com/"> Canon </A> --
 <A href="http://www.duracell.com/" > Duracell</A> --
 <A href="http://www.minolta.com/"> Minolta</A> --
-<A href="http://www.oce.com"> Océ Copying/Printing </A>
+<A href="http://www.oce.com"> Oce Copying/Printing </A>
 <br>
 <A href="http://www.mmm.com"> 3M </A> --
 <A href="http://www.jvc-america.com"> JVC </A> --
@@ -104,10 +104,10 @@
 <A href="http://www.llbean.com"> LL Bean </A> --
 <A href="http://www.sharperimage.com"> Sharper Image </A> --
 <A href="http://www.joeboxer.com"> Joe Boxer </A>
-</p><hr size=3 width=90%>
+</p><hr size=3 width=50%>
 
 <!---------------------->
-<p align=center> <strong> ENTERTAINMENT </strong><br>
+<p > <strong> ENTERTAINMENT </strong><br>
 <br>
 <A HREF="http://www.jbl.com"> JBL Speakers </A> --
 <A HREF="http://www.labtec.com"> Labtec Speakers </A> --
@@ -133,10 +133,10 @@
 <A href="http://www.zztop.com"> ZZTOP </A> --
 <A href="http://www.ingress.com/amc"> American Music Center </A> --
 <A href="http://www.iuma.com"> Free Music </A> --
-</p><hr size=3 width=90%> 
+</p><hr size=3 width=50%> 
 
 <!---------------------->
-<p align=center> <strong> FOOD </strong><br>
+<p > <strong> FOOD </strong><br>
 <A HREF="http://www.cornpops.com"> Corn Pops </A> --
 <A HREF="http://www.quakeroatmeal.com"> Quaker Oats </A> --
 <A HREF="http://www.treatsrecipes.com"> Rice Krispies </A> --
@@ -157,19 +157,19 @@
 <A HREF="http://www.french-bakery.com"> Sourdough French Bread </A> --
 <A HREF="http://www.io.com/~sjohn/sour.htm"> SourDough Bread </A> --
 <A HREF="http://www.menusonline.com"> Menus Online </A> --
-</p><hr size=3 width=90%>
+</p><hr size=3 width=50%>
 
 <!---------------------->
-<p align=center> <strong> MEDIA </strong><br>
+<p > <strong> MEDIA </strong><br>
 <br>
 <A HREF="http://www.irelandseye.com"> Ireland's Eye Online Mag </A> --
 <A HREF="http://www.cd101.com"> CD 101 Columbus Radio </A> --
 <A HREF="http://www.almanac.com"> The Old Farmers Almanac </A> --
 <A HREF="http://www.enews.com"> Electronic Newstand </A> --
 <A HREF="http://www.cspan.com/"> C-Span </A> --
+<br>
 <A HREF="http://www.usatoday.com/"> USA Today paper </A> --
 <A HREF="http://www.ohiomagazine.com"> Ohio Magazine </A> --
-<br>
 <A HREF="http://www.amazon.com">Amazon.com Books! </A> --
 <A HREF="http://www.Borders.com"> Borders Bookstore </A> --
 <A HREF="http://www.a1books.com/"> A1 Books </A> --
@@ -216,11 +216,11 @@
 <A HREF="http://columbustoday.com"> Columbus today </A> --
 <A HREF="http://www.newsbytes.com"> News Bytes </A> --
 
-</p><hr size=3 width=90%> 
+</p><hr size=3 width=50%> 
 
 
 <!---------------------->
-<p align=center> <strong> SPORTS </strong><br>
+<p > <strong> SPORTS </strong><br>
 <br>
 <A HREF="http://www.majorleaguebaseball.com"> Major League Baseball </A> --
 <A HREF="http://www.ttogreen.com"> Tee to Green Golf Mag </A> --
@@ -243,11 +243,11 @@
 <A href="http://www.topflite.com"> Topflite golf </A> --
 <A href="http://www.sportsnetwork.com"> Sports Network </A> --
 <A href="http://www.indians.com"> Cleveland Indians </A>
-</p><hr size=3 width=90%> 
+</p><hr size=3 width=50%> 
 
 <!---------------------->
-<p align=center> <strong> TELEVISION </strong><br>
-<center><font color=#FF0000><b>For Kathy and Julie:</b></font> <A href="http://www.spe.sony.com/Pictures/tv/soaps.html"> TV Soaps </a>
+<p > <strong> TELEVISION </strong><br>
+<font color=#FF0000><b>For Kathy and Julie:</b></font> <A href="http://www.spe.sony.com/Pictures/tv/soaps.html"> TV Soaps </a>
  -and- <A href="http://members.aol.com/soaplinks/index.html"> Soap Links </A> -and- 
 <A href="http://www.soapoperafan.com/days/index.html"> Days of our lives </A>
 
@@ -286,16 +286,16 @@
 <A HREF="http://www.wsaz.com/"> WSAZ tv </A> --
 <A HREF="http://www.primestar.com/"> PrimeStar tv </A> --
 <A HREF="http://www.wtrf.com/"> WTRF tv </A> --
-</p><hr size=3 width=90%> 
+</p><hr size=3 width=50%> 
 
 <!---------------------->
-<p align=center> <strong> WEATHER </strong><br>
+<p > <strong> WEATHER </strong><br>
 <A href="http://www.intellicast.com/weather/pit/radar/"> Pittsburgh Weather Map </a> --
 <a href="http://iwin.nws.noaa.gov/iwin/oh/oh.html"> Ohio Weather Forecast </a> --
-</p><hr size=3 width=90%>
+</p><hr size=3 width=50%>
 
 <!---------------------->
-<p align=center> <strong> TRAVEL </strong><br>
+<strong> TRAVEL </strong><br>
 <br>
 <A HREF="http://www.frommers.com/"> Frommers (travel) </A> --
 <A HREF="http://www.innsandouts.com/"> Inns & Outs - Bed & Breakfast Source </A> --
@@ -331,6 +331,6 @@
 <A href="dave_2.html">  Page 2 </A>
 <img align=absmiddle src="Images/blueball.gif">
 <A href="dave_3.html">  Page 3 </A>
-</p><hr size=5>
+</p></center>
 </BODY>
 </HTML>
