--- a/index.html
+++ b/index.html
@@ -13,48 +13,28 @@
   </head>
   
   <body style="background-color:lightgray;"> 
-    <!--body background="Images/bg-bkgrd.gif" bgproperties="fixed" bgcolor="#CCCCCC" >
-    <header>
-      <nav>
-      </nav>
-    </header>
-    <main>
-      <article>
-        <section>
-        </section>
-      </article>
-    </main>
-    <footer>
-    </footer>  
-      <span>
-      </span> (in-line)
-      <div>
-      </div> (block)
-
-      <iframe src="https://whatever.com" width="1000" height="800">
-      </iframe>
-    -->
-        
+    <!--body background="Images/bg-bkgrd.gif" bgproperties="fixed" bgcolor="#CCCCCC" >  -->
+            
     <!-- LAST MODIFIED DATE -->
-    <p align=center>
+   <center> 
+    <p>
     <SCRIPT LANGUAGE="JavaScript">
     var t = new Date(document.lastModified);
     document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
     </SCRIPT> </p>
-    <br/>
     <p>
-    <center><h2> Welcome to the Norris Page</h2></center>
+    <h2> Welcome to the Norris Page</h2>
 
-    <p><center>from Lucasville, Ohio. Take a look at <A HREF="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KOHLUCAS2 "> Dave's Weather station </A> </center></p>
+    <p>from Lucasville, Ohio. Take a look at <A HREF="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KOHLUCAS2 "> Dave's Weather station </A> </p>
 
-    <center>Hello....My Name is <A href="dave.html">David </A> and I live in
-    <A href="Images/scioto.jpg">Southern Ohio </A> with my wife <A href="deb.html">Debra </A>.</center>
+    Hello....My Name is <A href="dave.html">David </A> and I live in
+    <A href="Images/scioto.jpg">Southern Ohio </A> with my wife <A href="deb.html">Debra </A>
     </p>
-      <center>See our <A href="ccf.html" target="_blank"> "adopted" children </A></center>
-    <hr/>
+     See our <A href="ccf.html" target="_blank"> "adopted" children </A>
+     <hr size=3 width=50%>
     <!--<center>IMG SRC="Images/bar_blue.gif" WIDTH="560" HEIGHT="11" ALT="" </center>-->
 
-    <center><h2>Ohio State Buckeyes <a href="http://www.ohiostatebuckeyes.com/sports/m-footbl/sched/osu-m-footbl-sched.html">Football </a> Schedule </h2></center>
+    <h2>Ohio State Buckeyes <a href="http://www.ohiostatebuckeyes.com/sports/m-footbl/sched/osu-m-footbl-sched.html">Football </a> Schedule </h2>
 
     <!------------------------------------------------------------------------------->
     <!--center><h1> 2019 </h1><br>-->
@@ -81,16 +61,16 @@
         <tr><td>Nov 30 </td><td> @ scUM            </td><td> Noon Fox  </td><td> W 56 - 27 </td><td> note </td></tr>
         <tr><td>Dec 07 </td><td> Wisconsin (B1G Ch game) </td><td> 8:00 Fox  </td><td> W 34 - 21  </td><td> .    </td></tr>
       </tbody>
-    </table></center>
-    <center><h3>Dec 28, 2019  CFP Fiesta Bowl vs. Clemson: 8:00 ESPN  <font color=red>( L 23 - 29 ) </font></h3></center>
+    </table>
+    <h3>Dec 28, 2019  CFP Fiesta Bowl vs. Clemson: 8:00 ESPN  <font color=red>( L 23 - 29 ) </font></h3>
 
     <!------------------------------------------------------------------------------->
     <h3>
-    <hr />
-    <center><A href="OSU/osu_seat.jpg">Ohio Stadium seating chart </A> </center>
-    <hr />
-    <!--img align=bottom alt="New!" src="Images/new3.gif"-->
-    <center>
+    <hr size=3 width=50%>
+    <A href="OSU/osu_seat.jpg">Ohio Stadium seating chart </A> 
+    <hr size=3 width=50%>
+    <img align=bottom alt="New!" src="Images/new3.gif">
+    <p>
     <a href="osu2020.html"> 2020 Football schedule </a>
     <p>
     <a href="osu2021.html"> 2021 Football schedule </a>
@@ -99,7 +79,7 @@
     <p>
     <a href="osu2023.html"> 2023 Football schedule </a>
     <p>
-    <hr />
+      <hr size=3 width=50%>
     <a href="osu18.html"> 2018 Football results </a>
     <p>
     <a href="osu17.html"> 2017 Football results </a>
@@ -143,8 +123,8 @@
     <a href="osu98.html"> 1998 Football results </a>
     <p>
     <a href="osu97.html"> 1997 Football results </a>
-    <p></h3><hr />
-    <center><h3><pre>
+    <p></h3><hr size=3 width=50%>
+    <h3><pre>
     Oh! Come let's sing Ohio's praise,
     And songs to Alma Mater raise;
     While our hearts rebounding thrill,
@@ -171,20 +151,20 @@
     'Neath blackened sky, o'er barren shoal,
     Thoughts of thee bid darkness go,
     Dear Alma Mater -- O hi o.
-    </pre></center></h3>
-    <p><hr />
-    <center>Mens <a href="http://www.ohiostatebuckeyes.com/">  OSU Stuff </a></center>
-    <hr />
-    <p align=center>
-    <center><h2>Try these favorite <a href="dave_0.html"> sites </a></h2></center>
+    </h3></pre>
+    <p><hr size=3 width=50%>
+    Mens <a href="http://www.ohiostatebuckeyes.com/">  OSU Stuff </a>
+    <hr size=3 width=50%>
+    <p>
+    <h2>Try these favorite <a href="dave_0.html"> sites </a></h2>
 
-    <hr />
+    <hr size=3 width=50%>
 
-    <p align=center><img align=bottom alt="Mailbox" src="Images/an-email.gif" alt="mailbox">
+    <p><img align=bottom alt="Mailbox" src="Images/an-email.gif" alt="mailbox">
     Email: <a href="mailto:dnorris@REMOVEroadrunner.com?subject=Great Page"> DrDave </a>
 
-    <br></p>
-    <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
+    <br><p>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
+    </center>
 
-  </!--body>-->
+  </body>
 </html>
