--- a/osu2019.html
+++ b/osu2019.html
@@ -6,7 +6,7 @@
 <BODY background="Images/bg-paper.gif" BGCOLOR="#A4C8F0">
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p >
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
@@ -19,7 +19,6 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h1> 2019 </h1><br>
 <table border="1" align="center" >
 
-<table border="1" align="center" >
 <td>Aug  31</td><td><A href=""> Florida Atlantic </a> </td><td> TBA    </td><td> W   </td><td> note </td></tr>
 <td>Sept 07</td><td><A href=""> Cincinnati       </a> </td><td> TBA    </td><td> W   </td><td> note </td></tr>
 <td>Sept 14</td><td><A href=""> @ Indiana        </a> </td><td> TBA    </td><td> W    </td><td> note </td></tr>
@@ -39,9 +38,9 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <!--......................................................................................................-->
 
-<p><center> and M*ch*g*n still sucks!</center>
+<p><center> and M*ch*g*n still sucks!
 <br></p>
-<p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
-
+<p >&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
+</center>
 </body>
 </html>
