--- a/osu2020.html
+++ b/osu2020.html
@@ -6,7 +6,7 @@
 <BODY background="Images/bg-paper.gif" BGCOLOR="#A4C8F0">
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p >
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
@@ -19,7 +19,6 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <center><h1> 2020 </h1><br></center>
 <table border="1" align="center" >
-
 
 <tr><td>Sep 05</td><td class="has-text-align-left" data-align="left">Bowling Green </td><td>TBA</td><td>W </td><td>note</td></tr>
 <tr><td>Sep 12</td><td class="has-text-align-left" data-align="left">@ Oregon      </td><td></td><td></td><td></td></tr>
@@ -39,9 +38,9 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <!--......................................................................................................-->
 
-<p><center> and M*ch*g*n still sucks!</center>
+<p><center> and M*ch*g*n still sucks!
 <br></p>
-<p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
-
+<p >&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
+</center>
 </body>
 </html>
