--- a/osu2023.html
+++ b/osu2023.html
@@ -6,7 +6,7 @@
 <BODY background="Images/bg-paper.gif" BGCOLOR="#A4C8F0">
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p >
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
@@ -14,7 +14,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <center><h2><a href="http://ohiostatebuckeyes.ocsn.com/sports/m-footbl/osu-m-footbl-body.html"> OHIO STATE BUCKEYES Football Schedule </a> </h2></center>
 
-<!--......................................................................................................-->
+<!-------------------------------------------------------------------------------------------------------->
 
 <center><h1> 2023 </h1><br></center>
 <table border="1" align="center" >
@@ -36,11 +36,11 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <!-- /wp:table -->
 </table>
 
-<!--......................................................................................................-->
+<!--------------------------------------------------------------------------------------------------------->
 
-<p><center> and M*ch*g*n still sucks!</center>
+<p><center> and M*ch*g*n still sucks!
 <br></p>
-<p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
-
+<p >&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
+</center>
 </body>
 </html>
