--- a/osu12.html
+++ b/osu12.html
@@ -8,11 +8,11 @@
    <title>The 2011 OSU Football Season</title>
 </head>
 <body bgcolor="#CCCCCC" background="bg-bkgrd.gif">
-<p align=center>
+<p >
 
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p >
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
@@ -20,7 +20,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <center><h2>OHIO STATE BUCKEYES Football Schedule </h2></center>
 
-<!......................................................................................................>
+<!--......................................................................................................-->
 <center><h1> 2012 </h1><br>
 <table border="1" align="center" >
 
@@ -54,15 +54,14 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 </table>
 
-<center><h2>Jan 1  No BOWL! </h2></center>
+<center><h2>Jan 1  No BOWL  </h2></center>
 
-<!......................................................................................................>
+<!--......................................................................................................-->
 
-<h3>
-<p><center> and M*ch*g*n still sucks!</center>
+<p><center> and M*ch*g*n still sucks!
 <br></p>
 <br></p>
-<p align=center>&copy; 2008 D. Norris Inc., Property of Dr Dave</p>
-
+<p >&copy; 2008 D. Norris Inc., Property of Dr Dave</p>
+</center>
 </body>
 </html>
