--- a/osu15.html
+++ b/osu15.html
@@ -8,7 +8,7 @@
 
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p >
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
@@ -21,7 +21,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h1> 2015 </h1><br>
 <table border="1" align="center" >
 
-<table border="1" align="center" >
+
 <td>Sept 07</td><td><A href=""> @ Virginia Tech </a> </td><td> 8:00 ESPN </td><td> W 42 - 24 </td><td> (Labor Day) </td></tr>
 <td>Sept 12</td><td><A href=""> Hawaii </a> </td><td> 3:30 BTN </td><td> W 38 - 0 </td><td> note </td></tr>
 <td>Sept 19</td><td><A href=""> Northern Illinois  </a> </td><td> 3:30 </td><td> W 20 - 13 </td><td> note </td></tr>
@@ -42,11 +42,10 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <!---->
 
-
-<p><center> and M*ch*g*n still sucks!</center>
+<p><center> and M*ch*g*n still sucks!
 <br></p>
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
-
+</center>
 </body>
 </html>
 
