--- a/osu16.html
+++ b/osu16.html
@@ -8,7 +8,7 @@
 
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p >
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
@@ -20,7 +20,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h1> 2016 </h1><br>
 <table border="1" align="center" >
 
-<table border="1" align="center" >
+
 <td>Sept 03</td><td><A href=""> Bowling Green  </a> </td><td> Noon BTN </td><td> W 77 - 10 </td><td> note </td></tr>
 <td>Sept 10</td><td><A href=""> Tulsa </a> </td><td> 3:30 ABC </td><td> W 48 - 3 </td><td> note </td></tr>
 <td>Sept 17</td><td><A href=""> @ Oklahoma  </a> </td><td> 7:30 Fox </td><td> W 45 - 24 </td><td> note </td></tr>
@@ -34,16 +34,16 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <td>Nov 12 </td><td><A href=""> @ Maryland   </a> </td><td> 3:30 ESPN</td><td> W 62 - 3 </td><td> note </td></tr>
 <td>Nov 19 </td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> </td><td> Noon ESPN</td><td> W 17 - 16 </td><td>  note </td></tr>
 <td>Nov 26 </td><td><A href="http://www.umich.edu/~mgoblue/Football/"> scUM  </a> </td><td> Noon ABC </td><td> W 30 - 27 2OT </td><td> note </td></tr>
-<td>Dec 03 </td><td><A href="http://www.bigten.org/sports/m-footbl/archive/091610aac.html"> B1G Championship game  </a> </td><td> 8:00 Fox </td><td> na  </td><td> na . . . . . . . . . . . . . . . . . . . . . </td></tr>
+<td>Dec 03 </td><td><A href="http://www.bigten.org/sports/m-footbl/archive/091610aac.html"> B1G Champ game  </a> </td><td> 8:00 Fox </td><td> na  </td><td> na . . . . . . . . . . . . . . . . . . . . . </td></tr>
 
 </table>
 <center><h2>Dec 31, 2016  Fiesta Bowl vs. Clemson  <font color = red>  L 0 - 31 </h2></center></font>
 
 <!---->
 
-<p><center> and M*ch*g*n still sucks!</center>
+<p><center> and M*ch*g*n still sucks!
 <br></p>
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
-
+</center>
 </body>
 </html>
