--- a/osu17.html
+++ b/osu17.html
@@ -6,7 +6,7 @@
 <BODY background="Images/bg-paper.gif" BGCOLOR="#A4C8F0">
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p >
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
@@ -19,7 +19,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h1> 2017 </h1><br>
 <table border="1" align="center" >
 
-<table border="1" align="center" >
+
 <td>Aug  31</td><td><A href=""> @ Indiana  </a> </td><td> 8:00 ESPN </td><td> W 49 - 21  </td><td> note </td></tr>
 <td>Sept 09</td><td><A href=""> Oklahoma   </a> </td><td> 7:30 ABC  </td><td> <font color = red>L 16 - 31 </font> </td><td> note </td></tr>
 <td>Sept 16</td><td><A href=""> Army       </a> </td><td> 4:30 Fox  </td><td> W 38 - 7   </td><td> note </td></tr>
@@ -39,9 +39,9 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h2>Dec 29, 2017  Cotton Bowl vs. USC   W 24-7  </h2></center>
 <!--......................................................................................................-->
 
-<p><center> and M*ch*g*n still sucks!</center>
+<p><center> and M*ch*g*n still sucks!
 <br></p>
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
-
+</center>
 </body>
 </html>
