--- a/osu13.html
+++ b/osu13.html
@@ -7,14 +7,14 @@
 <BODY background="Images/bg-paper.gif" BGCOLOR="#A4C8F0">
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p >
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
 </SCRIPT> </p>
 
 <center><h2><a href="http://ohiostatebuckeyes.ocsn.com/sports/m-footbl/osu-m-footbl-body.html"> OHIO STATE BUCKEYES Football Schedule </a> </h2></center>
-<!......................................................................................................>
+<!--......................................................................................................-->
 <center><h1> 2013 </h1><br>
 <table border="1" align="center" >
 
@@ -54,10 +54,9 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <!---->
 
-
-<p><center> and M*ch*g*n still sucks!</center>
+<p><center> and M*ch*g*n still sucks!
 <br></p>
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
-
+</center>
 </body>
 </html>
