--- a/osu14.html
+++ b/osu14.html
@@ -8,18 +8,18 @@
 
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p >
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
 </SCRIPT> </p>
 
 <center><h2><a href="http://ohiostatebuckeyes.ocsn.com/sports/m-footbl/osu-m-footbl-body.html"> OHIO STATE BUCKEYES Football Schedule </a> </h2></center>
-<!......................................................................................................>
+<!--......................................................................................................-->
 <center><h1> 2014 </h1><br>
 <table border="1" align="center" >
 
-<table border="1" align="center" >
+
 <td>Aug 30 </td><td><A href=""> Navy (@ Balt) </a> </td><td> Noon CBS Sports Net. </td><td> W 34 - 17 </td><td> JT Barett 1ststart, 226P, 59R, 2TD </td></tr>
 <td>Sept 06 </td><td><A href=""> Virginia Tech  </a> </td><td> 8:00 ESPN </td><td><font color = red> L 21 - 35  </td><td> JTB 219P, 1TD,125R </td></tr>
 <td>Sept 13 </td><td><A href=""> Kent State </a> </td><td> Noon ABC/ESPN/2 </td><td> W 66 - 0 </td><td> JTB 312P, 6 TDs; Samuel 100R, 2TD </td></tr>
@@ -42,9 +42,9 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <!---->
 
-<p><center> and M*ch*g*n still sucks!</center>
+<p><center> and M*ch*g*n still sucks!
 <br></p>
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
-
+</center>
 </body>
 </html>
