--- a/osu18.html
+++ b/osu18.html
@@ -6,7 +6,7 @@
 <BODY background="Images/bg-paper.gif" BGCOLOR="#A4C8F0">
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p >
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
@@ -19,7 +19,6 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h1> 2018 </h1><br>
 <table border="1" align="center" >
 
-<table border="1" align="center" >
 <td>Sept 01</td><td><A href=""> Oregon State </a> </td><td> Noon ABC  </td><td> W 77 - 31  </td><td> Haskins 313P, 5TD; Weber 186R, 4 TD </td></tr>
 <td>Sept 08</td><td><A href=""> Rutgers      </a> </td><td> 3:30 BTN  </td><td> W 52 - 3  </td><td> note </td></tr>
 <td>Sept 15</td><td><A href=""> @ TCU        </a> </td><td> 8:00 ABC  </td><td> W 40 - 28  </td><td> note </td></tr>
@@ -36,12 +35,12 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <td>Dec 01 </td><td><A href=""> Northwestern (B1G Ch game)</a> </td><td> 8:00 Fox </td><td> W 45 - 24   </td><td> .    </td></tr>
 
 </table>
-<center><h2>Jan 01, 2019  Rose Bowl vs. Washington :   ( W 28 - 23 )</h2></center>
+<center><h2>Jan 01, 2019  Rose Bowl vs. Washington:   W 28 - 23 </h2></center>
 <!---->
 
-<p><center> and M*ch*g*n still sucks!</center>
+<p><center> and M*ch*g*n still sucks!
 <br></p>
-<p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
-
+<p >&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
+</center>
 </body>
 </html>
