--- a/ROS35.html
+++ b/ROS35.html
@@ -15,20 +15,20 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 </SCRIPT> </center>
 <H1><CENTER> US 35 pictures </CENTER></H1>
 <hr size=6 width=90%> 
-
-<p align=center> 
-US 35 construction in Ross County, Ohio
-<p align=center>
+<center>
+<p > 
+<h2>US 35 construction in Ross County, Ohio</h2>
+<p >
 <img src="ROS35/US35westend.JPG">
-This is the Chillicothe end of the existing US 35 4-lane section,
+<p ></p>This is the Chillicothe end of the existing US 35 4-lane section,
 where US 50 splits off to the East
 (US 50 goes to the left, existing US 35 goes to the right)
 <hr size=6 width=90%> 
 
-<p align=center> 
+<p > 
 
 <img src="ROS35/US35eastend.JPG">
-This is the Richmondale end.. looking NW...
+<p ></p>This is the Richmondale end.. looking NW...
 existing US 35 goes to the left
 the twin bridges are over the Jackson Shortline RR
 SouthEastern High School used to be in the brown area by the school
@@ -36,10 +36,10 @@ busses.
 <hr size=6 width=90%> 
 
 
-<p align=center> 
+<p > 
 
-<img src="ROS35/US35Einterchange.JPG">
-This is the new interchange at Richmondale. The road to the top is
+<img src="ROS35/US35Einterchange.JPG" alt="US 35 at Richmondale ">
+<p></p>This is the new interchange at Richmondale. The road to the top is
 Watson Road, and the road going into town is Vigo Road.  US 35 crosses
 Salt Creek at the left.  The connection to old US 35 is at the topmost
 right.
