--- a/osuindex.html
+++ b/osuindex.html
@@ -40,19 +40,13 @@ To save to your disk, right-click, and select "Save Target as.."
 
 <p><center> <h2> Photos</h2><h4>
 <ul>
-<LI><img src="OSU/pregame.jpg" > TBDBITL marches on the field 9/8/01 </a>
-<LI><img src="OSU/Ohio_Stadium160.jpg" > Ohio Stadium (under reconstruction) </a>
-<LI><img src="OSU/osu2001seating.jpg" > Ohio Stadium seating chart </a>
-<LI><img src="OSU/OSU_37_21.jpg" > Buckeyes beat scUM again </a>
-<LI><img src="OSU/Salley_hit_Baas.jpg" > Salley hits Baas </a>
+<LI><img src="OSU/pregame.jpg" > <p></p> marches on the field 9/8/01 </a>
+<LI><img src="OSU/Ohio_Stadium160.jpg" > <p></p>Ohio Stadium (under reconstruction) </a>
+<LI><img src="OSU/osu2001seating.jpg" > <p></p>Ohio Stadium seating chart </a>
+<LI><img src="OSU/OSU_37_21.jpg" > <p></p>Buckeyes beat scUM again </a>
+<LI><img src="OSU/Salley_hit_Baas.jpg" > <p></p>Salley hits Baas </a>
 </UL></h4>
 
-<p>
-<a href="http://www.sportsposterwarehouse.com/warehouse/osuchamps03ei.htm" > Link to the Fiesta poster </a>
-<p>
-<a href="http://www.osu.edu/wallpaper/" > Link to the OSU computer wallpaper </a>
-<p>
-<a href="http://bucknakid.buckeyefanatic.com/" > Link to OSU computer wallpaper </a>
 </center>>
 </p><hr size=5>
 <!---------------------->
